<resources>
    <string name="app_name">ChangeMachine</string>
    <string name="sangria">Sangria</string>
    <string name="abastecer">abastecer</string>
    <string name="troco">troco</string>
    <string name="conferir_caixa">Conferir Caixa</string>
    <string name="_0">0</string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
    <string name="salvar">Salvar</string>
    <string name="centavos100">R$1.00</string>
    <string name="centavos50">R$0.50</string>
    <string name="centavos25">R$0.25</string>
    <string name="centavos10">R$0.10</string>
    <string name="centavos5">R$0.05</string>
    <string name="centavos1">R$0.01</string>
    <string name="moedas_e_quantidades">Moedas e quantidades</string>
    <string name="sacar">sacar</string>
    <string name="must_positive">O número deve ser positivo.</string>
</resources>