<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Change">

    <TextView
        android:id="@+id/titleShowQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/moedas_e_quantidades"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- R$ 1.00 -->
    <TextView
        android:id="@+id/quantity100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/titleShowQuantity"
        app:layout_constraintTop_toBottomOf="@+id/titleShowQuantity" />

    <TextView
        android:id="@+id/title100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/centavos100"
        app:layout_constraintStart_toStartOf="@+id/titleShowQuantity"
        app:layout_constraintTop_toBottomOf="@+id/titleShowQuantity" />

    <!-- R$ 0.50 -->
    <TextView
        android:id="@+id/quantity050"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/quantity100"
        app:layout_constraintTop_toBottomOf="@+id/quantity100" />

    <TextView
        android:id="@+id/title050"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/centavos50"
        app:layout_constraintStart_toStartOf="@+id/title100"
        app:layout_constraintTop_toBottomOf="@+id/title100" />

    <EditText
        android:id="@+id/purchaseValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="Valor da compra"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/title050" />

    <EditText
        android:id="@+id/providedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="number"
        android:hint="Valor entregue"
        app:layout_constraintEnd_toEndOf="@+id/purchaseValue"
        app:layout_constraintStart_toStartOf="@+id/purchaseValue"
        app:layout_constraintTop_toBottomOf="@+id/purchaseValue" />

    <Button
        android:id="@+id/generateChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gerar Troco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/providedValue"
        app:layout_constraintStart_toStartOf="@+id/providedValue"
        app:layout_constraintTop_toBottomOf="@+id/providedValue" />

    <TextView
        android:id="@+id/changeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/generateChange"
        app:layout_constraintEnd_toEndOf="@+id/providedValue"
        app:layout_constraintStart_toStartOf="@+id/providedValue"
        app:layout_constraintTop_toBottomOf="@+id/providedValue" />
</androidx.constraintlayout.widget.ConstraintLayout>